--- a/eTism-ng/package.json
+++ b/eTism-ng/package.json
@@ -3,22 +3,22 @@
   "version": "1.5.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider ng build --configuration=production",
+    "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider ng serve",
+    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "echo \"E2E tests disabled (protractor removed)\" && exit 0"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^21.0.6",
-    "@angular/common": "^21.0.6",
-    "@angular/compiler": "^21.0.6",
-    "@angular/core": "^21.0.6",
-    "@angular/forms": "^21.0.6",
-    "@angular/platform-browser": "^21.0.6",
-    "@angular/platform-browser-dynamic": "^21.0.6",
-    "@angular/router": "^21.0.6",
+    "@angular/animations": "~9.0.6",
+    "@angular/common": "~9.0.6",
+    "@angular/compiler": "~9.0.6",
+    "@angular/core": "~9.0.6",
+    "@angular/forms": "~9.0.6",
+    "@angular/platform-browser": "~9.0.6",
+    "@angular/platform-browser-dynamic": "~9.0.6",
+    "@angular/router": "~9.0.6",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
     "ngx-owl-carousel": "^2.0.7",
@@ -27,32 +27,26 @@
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
-  "overrides": {
-    "ora": "5.4.1"
-  },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^21.0.4",
-    "@angular/cli": "^21.0.4",
-    "@angular/compiler-cli": "^21.0.6",
-    "@angular/language-service": "^21.0.6",
+    "@angular-devkit/build-angular": "~0.900.6",
+    "@angular/cli": "~9.0.6",
+    "@angular/compiler-cli": "~9.0.6",
+    "@angular/language-service": "~9.0.6",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^20.19.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "cross-env": "^10.1.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^6.4.4",
+    "karma": "~4.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "ts-node": "~10.9.1",
-    "typescript": "~5.3.3",
-    "eslint": "^8.50.0",
-    "@angular-eslint/eslint-plugin": "^14.0.0",
-    "@angular-eslint/eslint-plugin-template": "^14.0.0",
-    "@angular-eslint/template-parser": "^14.0.0",
-    "prettier": "^2.8.0",
-    "eslint-config-prettier": "^8.8.0"
+    "protractor": "~5.4.3",
+    "ts-node": "~8.3.0",
+    "tslint": "~5.18.0",
+    "typescript": "~3.7.5"
   }
 }
